--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.svg-icon.search-icon {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+}
