--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,21 @@
 @tailwind utilities;
 
 .svg-icon.search-icon {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #cbd5e0;
+  border-radius: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #4a5568;
+  border-radius: 6px;
 }
